# ExcaStoneBoard

./: .gitignore  .prettierignore  FEATURE_IMPROVEMENTS.md  LICENSE  README.md  build.bat  dev.bat  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-windows.yml  pr-verification.yml  publish-to-store.yml  release-linux-bundles.yml  release-windows-bundles.yml
.system-test-data/wdio-1773506087113/: boards.db
e2e/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wdio.conf.mjs
e2e/helpers/: board-ui.mjs
e2e/specs/: smoke.e2e.mjs  system.e2e.mjs
src/: App.css  App.tsx  main.tsx  tauri-opener.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  thumbnails.rs
src-tauri/src/commands/: board_content.rs  board_transfer.rs  boards.rs  mod.rs  system_tests.rs  ui_preferences.rs
src-tauri/src/migrations/: legacy_json.rs  mod.rs
src/components/: BoardList.css  BoardList.tsx  CommandPalette.css  CommandPalette.tsx  ExcalidrawFrame.css  ExcalidrawFrame.tsx  boardListDnd.ts
src/hooks/: useAppController.ts  useBoards.ts  useUiPreferences.ts
src/types/: board.ts
